[package]
name = "burrito"
version = "0.1.0"
edition = "2021"

[lib]
name = "calcium"
path = "src/lib.rs"

[[burrito]]
name = "burrito"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_ops = "0.3.0"
gc = { version = "0.4.1", features = ["derive"] }
qcell = { version = "0.5.3", features = ["generativity"] }
generativity = "1.0.1"

[build-dependencies]
bindgen = "0.63.0"